--- a/Poseidon/Poseidon.csproj
+++ b/Poseidon/Poseidon.csproj
@@ -1,211 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{081A1DB5-1C9A-447B-9D82-7EC2D3A3C122}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Poseidon</RootNamespace>
-    <AssemblyName>Poseidon</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>anycpu</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>0</WarningLevel>
-    <DocumentationFile>bin\Debug\Poseidon.XML</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
-    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32bit>false</Prefer32bit>
-    <DocumentationFile>bin\Release\Poseidon.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>Poseidon.Program</StartupObject>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="Dapper">
-      <HintPath>..\packages\Dapper.1.50.5\lib\net451\Dapper.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Net" />
-    <Reference Include="MySql.Data">
-      <HintPath>..\packages\MySql.Data.6.8.8\lib\net45\MySql.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="mysql.data.entity.EF6">
-      <HintPath>..\packages\MySql.Data.Entities.6.8.3.0\lib\net45\mysql.data.entity.EF6.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="TableParser.cs" />
-    <Compile Include="Kraken.cs" />
-    <Compile Include="KrakenException.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FiatCurrency.cs" />
-    <Compile Include="Models\FiatCurrency\EuropeanCentralBankResponse.cs" />
-    <Compile Include="Models\Kraken\AccountBalance.cs" />
-    <Compile Include="Models\Kraken\AssetInfo.cs" />
-    <Compile Include="Models\Kraken\AssetPairs.cs" />
-    <Compile Include="Models\Kraken\CurrencyLog.cs" />
-    <Compile Include="Models\Kraken\OHLC.cs" />
-    <Compile Include="Models\Kraken\OHLCSet.cs" />
-    <Compile Include="Models\Kraken\OrderBook.cs" />
-    <Compile Include="Models\Kraken\OrderBookOrder.cs" />
-    <Compile Include="Models\Kraken\RecentSpread.cs" />
-    <Compile Include="Models\Kraken\RecentTrades.cs" />
-    <Compile Include="Models\Kraken\ServerTime.cs" />
-    <Compile Include="Models\Kraken\SpreadItem.cs" />
-    <Compile Include="Models\Kraken\Ticker.cs" />
-    <Compile Include="Models\Kraken\Trade.cs" />
-    <Compile Include="Models\Kraken\Old\AddOrderDescr.cs" />
-    <Compile Include="Models\Kraken\Old\AddOrderResponse.cs" />
-    <Compile Include="Models\Kraken\Old\AddOrderResult.cs" />
-    <Compile Include="Models\Kraken\Old\CancelOrderResponse.cs" />
-    <Compile Include="Models\Kraken\Old\CancelOrderResult.cs" />
-    <Compile Include="Models\Kraken\Old\FeeInfo.cs" />
-    <Compile Include="Models\Kraken\Old\GetDepositAddressesResponse.cs" />
-    <Compile Include="Models\Kraken\Old\GetDepositAddressesResult.cs" />
-    <Compile Include="Models\Kraken\Old\GetDepositMethodsResponse.cs" />
-    <Compile Include="Models\Kraken\Old\GetDepositMethodsResult.cs" />
-    <Compile Include="Models\Kraken\Old\GetDepositStatusResponse.cs" />
-    <Compile Include="Models\Kraken\Old\GetDepositStatusResult.cs" />
-    <Compile Include="Models\Kraken\Old\GetLedgerResponse.cs" />
-    <Compile Include="Models\Kraken\Old\GetLedgerResult.cs" />
-    <Compile Include="Models\Kraken\Old\GetOpenPositionsResponse.cs" />
-    <Compile Include="Models\Kraken\Old\GetTradeBalanceResponse.cs" />
-    <Compile Include="Models\Kraken\Old\GetTradesHistoryResponse.cs" />
-    <Compile Include="Models\Kraken\Old\GetTradesHistoryResult.cs" />
-    <Compile Include="Models\Kraken\Old\GetTradeVolumeResponse.cs" />
-    <Compile Include="Models\Kraken\Old\GetTradeVolumeResult.cs" />
-    <Compile Include="Models\Kraken\Old\GetWithdrawInfoResponse.cs" />
-    <Compile Include="Models\Kraken\Old\GetWithdrawInfoResult.cs" />
-    <Compile Include="Models\Kraken\Old\GetWithdrawStatusResponse.cs" />
-    <Compile Include="Models\Kraken\Old\GetWithdrawStatusResult.cs" />
-    <Compile Include="Models\Kraken\Old\KrakenOrder.cs" />
-    <Compile Include="Models\Kraken\Old\LedgerInfo.cs" />
-    <Compile Include="Models\Kraken\Old\OrderDescription.cs" />
-    <Compile Include="Models\Kraken\Old\OrderInfo.cs" />
-    <Compile Include="Models\Kraken\Old\PositionInfo.cs" />
-    <Compile Include="Models\Kraken\Old\QueryLedgersResponse.cs" />
-    <Compile Include="Models\Kraken\Old\QueryOrdersResponse.cs" />
-    <Compile Include="Models\Kraken\Old\QueryTradesResponse.cs" />
-    <Compile Include="Models\Kraken\Old\ResponseBase.cs" />
-    <Compile Include="Models\Kraken\Old\TradeBalanceInfo.cs" />
-    <Compile Include="Models\Kraken\Old\TradeInfo.cs" />
-    <Compile Include="Models\Kraken\Old\WithdrawCancelResponse.cs" />
-    <Compile Include="Models\Kraken\Old\WithdrawResponse.cs" />
-    <Compile Include="Models\Kraken\Old\WithdrawResult.cs" />
-    <Compile Include="Database.cs" />
-    <Compile Include="Settings.cs" />
-    <Compile Include="Utilities.cs" />
-    <Compile Include="CryptoCurrency.cs" />
-    <Compile Include="Logger.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
-      <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\FiatCurrency\" />
-    <Folder Include="Models\Kraken\" />
-    <Folder Include="Models\Kraken\Old\" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
-  <ProjectExtensions>
-    <MonoDevelop>
-      <Properties>
-        <Policies>
-          <TextStylePolicy TabWidth="4" IndentWidth="4" RemoveTrailingWhitespace="True" NoTabsAfterNonTabs="False" EolMarker="Native" FileWidth="80" TabsToSpaces="True" scope="text/plain" />
-          <DotNetNamingPolicy ResourceNamePolicy="FileFormatDefault" DirectoryNamespaceAssociation="PrefixedHierarchical" />
-          <CSSFormattingPolicy AutomaticFormatting="True" BracePositions="SemiExpanded" FormatOnPaste="True" HierarchicalIndentation="True" scope="text/x-css" />
-          <TextStylePolicy FileWidth="120" TabWidth="4" IndentWidth="4" RemoveTrailingWhitespace="True" EolMarker="Native" TabsToSpaces="True" NoTabsAfterNonTabs="True" scope="text/x-css" />
-          <HTMLFormattingPolicy FormatOnPaste="True" XHTMLCodingStyle="True" scope="text/x-html" />
-          <TextStylePolicy FileWidth="120" TabWidth="4" IndentWidth="4" RemoveTrailingWhitespace="True" EolMarker="Native" TabsToSpaces="True" NoTabsAfterNonTabs="True" scope="text/x-html" />
-          <JSONFormattingPolicy AutomaticFormatting="False" AutoStructureCompletion="True" BracePositions="SemiExpanded" FormatOnPaste="True" scope="text/x-json" />
-          <TextStylePolicy FileWidth="120" RemoveTrailingWhitespace="True" EolMarker="Native" TabWidth="2" TabsToSpaces="True" IndentWidth="2" NoTabsAfterNonTabs="True" scope="text/x-json" />
-          <LESSFormattingPolicy scope="text/x-less" />
-          <TextStylePolicy FileWidth="120" TabWidth="4" IndentWidth="4" RemoveTrailingWhitespace="True" EolMarker="Native" TabsToSpaces="True" NoTabsAfterNonTabs="True" scope="text/x-less" />
-          <ScssFormattingPolicy scope="text/x-scss" />
-          <TextStylePolicy FileWidth="120" TabWidth="4" IndentWidth="4" RemoveTrailingWhitespace="True" EolMarker="Native" TabsToSpaces="True" NoTabsAfterNonTabs="True" scope="text/x-scss" />
-          <TextStylePolicy FileWidth="120" TabWidth="4" IndentWidth="4" RemoveTrailingWhitespace="True" EolMarker="Native" TabsToSpaces="True" NoTabsAfterNonTabs="True" scope="text/x-fsharp" />
-          <FSharpFormattingPolicy scope="text/x-fsharp">
-            <DefaultFormat IndentOnTryWith="False" ReorderOpenDeclaration="False" SpaceAfterComma="True" SpaceAfterSemicolon="True" SpaceAroundDelimiter="True" SpaceBeforeArgument="True" SpaceBeforeColon="True" __added="0" />
-          </FSharpFormattingPolicy>
-          <StandardHeader IncludeInNewFiles="True" Text="--- ${FileName} ---&#xA;&#xA;MIT License&#xA;&#xA;Copyright (c) ${Year} ${AuthorName} - ${AuthorEmail}&#xA;&#xA;Permission is hereby granted, free of charge, to any person obtaining a copy&#xA;of this software and associated documentation files (the &quot;Software&quot;), to deal&#xA;in the Software without restriction, including without limitation the rights&#xA;to use, copy, modify, merge, publish, distribute, sublicense, and/or sell&#xA;copies of the Software, and to permit persons to whom the Software is&#xA;furnished to do so, subject to the following conditions:&#xA;&#xA;The above copyright notice and this permission notice shall be included in all&#xA;copies or substantial portions of the Software.&#xA;&#xA;THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR&#xA;IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,&#xA;FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE&#xA;AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER&#xA;LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,&#xA;OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE&#xA;SOFTWARE." />
-        </Policies>
-      </Properties>
-    </MonoDevelop>
-  </ProjectExtensions>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>netcoreapp2.1</TargetFramework>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="EntityFramework" Version="6.2.0"/>
+        <PackageReference Include="MySql.Data" Version="8.0.13"/>
+        <PackageReference Include="MySql.Data.Entity" Version="6.10.8"/>
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.1"/>
+    </ItemGroup>
+
 </Project>
